k8s-manifests/elasticsearch/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch-route
  namespace: elastic-system
spec:
  parentRefs:
    - name: internal-gw
  namespace: gateway-internal
  hostnames:
    - elasticsearch.home.arpa
  rules:
    - matches:
      path:
        type: PathPrefix
        value: /
      backendRefs:
        - name: elasticsearch-master
          port: 9200
